--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,11 @@
     </header>
     <section>
         <ul>
-            <li><button></button></li>
-            <li><button></button></li>
-            <li><button></button></li>
-            <li><button></button></li>
-            <li><button></button></li>
+            <li><button>Усе</button></li>
+            <li><button>Веб-сайти</button></li>
+            <li><button>Застосунки</button></li>
+            <li><button>Дизайн</button></li>
+            <li><button>Маркетинг</button></li>
         </ul>
         <ul>
             <li><img src="./images/texnokryak.jpg" width="370" alt="texnokryak">
