--- a/portfolio.html
+++ b/portfolio.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfilio</title>
 </head>
-
 <body>
     <header>
         <nav>
             <a href=""><span>Web</span>Studio</a>
+            <a href="/" class="logo link"><span class="span-logo">Web</span>Studio</a>
             <ul>
                 <li><a href="./index.html">Студія</a></li>
                 <li><a href="">Портфоліо</a></li>
                 <li><a href="">Контакти</a></li>
+                <li><a href="./index.html" class="menu link">Студія</a></li>
+                <li><a href="" class="menu link">Портфоліо</a></li>
+                <li><a href="" class="menu link">Контакти</a></li>
             </ul>
         </nav>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="header-contakt link"> info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="header-contakt link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -34,7 +41,7 @@
                 <li><button type="button">Веб-сайти</button></li>
                 <li><button type="button">Застосунки</button></li>
                 <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button">Маркетинг </button></li>
             </ul>
             <ul>
                 <li><img src="./images/img-1.jpg" alt="Website" width="370">
@@ -49,7 +56,7 @@
                     <h3>Ресторан Seafood</h3>
                     <p>Застосунки</p>
                 </li>
-                <li><img src="./images/img-4.jpg" alt="Marketing" width="370">
+                <li> id="veb"<img src="./images/img-4.jpg" alt="Marketing" width="370">
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
@@ -78,17 +85,21 @@
         <!-- Футер -->
         <footer>
             <nav><a href=""><span>Web</span>Studio</a></nav>
+        <footer class="footer">
+            <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
+                        class="span-footer link">Studio</span></a>
+            </nav>
             <address>
                 <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7">м. Київ, пр-т Лесі Українки, 26</a>
+                <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки, 26</a>
             </address>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
             </ul>
         </footer>
     </main>
-
-
 </body>
-
 </html>
