--- a/index.html
+++ b/index.html
@@ -132,16 +132,31 @@
         </section>
         <!-- Футер -->
         <footer class="footer">
-            <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
-                        class="span-footer link">Studio</span></a>
-            </nav>
-            <address>
-                <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки, 26</a>
-            </address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
-            </ul>
+            <div class="container">
+                <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
+                            class="span-footer link">Studio</span></a>
+                </nav>
+                <address>
+                    <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки,
+                        26</a>
+                </address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
+                </ul>
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
         </footer>
     </main>
 </body>
