--- a/index.html
+++ b/index.html
@@ -11,104 +11,90 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
+
     <link rel="stylesheet" href="./css/style.css">
     <title>WebStudia</title>
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <nav>
+        <div class="container main-nav">
+            <nav class="top-navigation">
                 <a href="/" class="logo link"><span class="span-logo">Web</span>Studio</a>
-                <ul>
-                    <li><a href="/" class="menu link">Студія</a></li>
-                    <li><a href="./portfolio.html" class="menu link">Портфоліо</a></li>
-                    <li><a href="/" class="menu link">Контакти</a></li>
+                <ul class="menu-list">
+                    <li class="menu-item"><a href="" class="menu link">Студія</a></li>
+                    <li class="menu-item"><a href="./portfolio.html" class="menu link">Портфоліо</a></li>
+                    <li class="menu-item"><a href="" class="menu link">Контакти</a></li>
                 </ul>
 
+                <ul class="list-contakts list" >
+                    <li class="item" ><a href="mailto:info@devstudio.com" class="header-contakt link">
+                            info@devstudio.com</a></li>
+                    <li class="item"><a href="tel:+380961111111" class="header-contakt link">+38 096 111 11 11</a></li>
+                </ul>
             </nav>
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="header-contakt link"> info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="header-contakt link">+38 096 111 11 11</a></li>
-            </ul>
         </div>
     </header>
 
-
     <main>
         <!-- Герой -->
-
         <section class="hero section">
             <div class="container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
                 <button type="button" class="hero-btn">Замовити послугу</button>
-
-
-
             </div>
-
         </section>
 
         <!-- Наші переваги -->
-
         <section class="advantages section">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
-                <ul>
-                    <li>
+                <ul class="attention-list">
+                    <li class="item">
                         <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="advantages-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
                             veritatis
                             exercitationem
                             velit magnam iure.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">ПунктуальнІсть</h3>
                         <p class="advantages-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
                             veritatis exercitationem
                             velit magnam iure.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">ПЛанування</h3>
                         <p class="advantages-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
                             veritatis exercitationem
                             velit magnam iure.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">СУЧАСНІ ТЕхнології</h3>
                         <p class="advantages-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
                             veritatis exercitationem
                             velit magnam iure.</p>
                     </li>
                 </ul>
-
-
-
             </div>
 
         </section>
 
         <!-- Чим ми займаємося -->
-
         <section class="our-works section">
             <div class="container">
                 <h2 class="section-title">Чим ми займаємося</h2>
-
                 <ul class="our-works-list">
                     <li><img src="./images/keyboard.jpg" alt="computer" width="370"></li>
                     <li><img src="./images/Laptop-.jpg" alt="laptop" width="370"></li>
                     <li><img src="./images/Tablet-.jpg" alt="tablet" width="370"></li>
                 </ul>
-
             </div>
-
         </section>
         <!-- Наша команда -->
-
         <section class="our-teem section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-
                 <ul class="our-teem-list">
                     <li><img src="./images/igor.jpg" alt="igor" width="270">
                         <h3 class="our-teem-title">Ігор Дем’яненко</h3>
@@ -144,17 +130,6 @@
                     <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
                 </ul>
-
-
-
-
-
-
-
-
-
-
-
             </div>
 
         </footer>
