--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
+
     <link rel="stylesheet" href="./css/style.css">
     <title>Portfilio</title>
 </head>
@@ -19,48 +20,46 @@
 <body>
     <header>
         <div class="container">
-            <nav>
-
+            <nav class="nav">
                 <a href="/" class="logo link"><span class="span-logo">Web</span>Studio</a>
                 <ul>
-
                     <li><a href="./index.html" class="menu link">Студія</a></li>
                     <li><a href="" class="menu link">Портфоліо</a></li>
                     <li><a href="" class="menu link">Контакти</a></li>
                 </ul>
             </nav>
             <ul>
-
                 <li><a href="mailto:info@devstudio.com" class="header-contakt link"> info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="header-contakt link">+38 096 111 11 11</a></li>
             </ul>
         </div>
-
     </header>
+
     <main>
-        <section class="portfolio">
-            <div class="container">
+        <div class="container">
+            <section class="portfolio">
                 <ul>
-                    <li><button type="button" class="portfolio-btn">Усе</button></li>
-                    <li><button type="button" class="portfolio-btn">Веб-сайти</button></li>
-                    <li><button type="button" class="portfolio-btn">Застосунки</button></li>
-                    <li><button type="button" class="portfolio-btn">Дизайн</button></li>
-                    <li><button type="button" class="portfolio-btn">Маркетинг </button></li>
+                    <li><button type="button" class="filter-btn">Усе</button></li>
+                    <li><button type="button" class="filter-btn">Веб-сайти</button></li>
+                    <li><button type="button" class="filter-btn">Застосунки</button></li>
+                    <li><button type="button" class="filter-btn">Дизайн</button></li>
+                    <li><button type="button" class="filter-btn">Маркетинг </button></li>
                 </ul>
+
                 <ul>
                     <li><img src="./images/texnokryak.jpg" alt="Website" width="370">
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="portfolio-text">Веб-сайти</p>
                     </li>
                     <li><img src="./images/dizain.jpg" alt="Design" width="370">
-                        <h3>Постер New Orlean vs Golden Star</h3>
+                        <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                         <p class="portfolio-text">Дизайн</p>
                     </li>
                     <li><img src="./images/restoraunt.jpg" alt="Application" width="370">
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="portfolio-text">Застосунки</p>
                     </li>
-                    <li> id="veb"<img src="./images/project.jpg" alt="Marketing" width="370">
+                    <li><img src="./images/project.jpg" alt="Marketing" width="370">
                         <h3 class="portfolio-title">Проект Prime</h3>
                         <p class="portfolio-text">Маркетинг</p>
                     </li>
@@ -85,33 +84,24 @@
                         <p class="portfolio-text">Замовити</p>
                     </li>
                 </ul>
-
-
-            </div>
+        </div>
 
         </section>
-
         <!-- Футер -->
-        <footer>
+        <footer class="footer">
             <div class="container">
-                <nav><a href=""><span>Web</span>Studio</a></nav>
-                <footer class="footer">
-                    <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
-                                class="span-footer link">Studio</span></a>
-                    </nav>
-                    <address>
-
-                        <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі
-                            Українки, 26</a>
-                    </address>
-                    <ul>
-
-                        <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
-                        <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
-                    </ul>
-
+                <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
+                            class="span-footer link">Studio</span></a>
+                </nav>
+                <address>
+                    <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки,
+                        26</a>
+                </address>
+                <ul>
+                    <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
+                </ul>
             </div>
-
         </footer>
     </main>
 </body>
