--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container main-nav">
             <nav class="top-navigation">
                 <a href="/" class="logo link"><span class="span-logo">Web</span>Studio</a>
-                <ul class="menu-list">
+                <ul class="menu-list list"> 
                     <li class="menu-item"><a href="" class="menu link">Студія</a></li>
                     <li class="menu-item"><a href="./portfolio.html" class="menu link">Портфоліо</a></li>
                     <li class="menu-item"><a href="" class="menu link">Контакти</a></li>
