--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             <div class="container">
                 <h2 class="section-title">Чим ми займаємося</h2>
                 <ul class="our-works-list">
-                    <li><img src="./images/keyboard.jpg" alt="computer" width="370"></li>
-                    <li><img src="./images/Laptop-.jpg" alt="laptop" width="370"></li>
-                    <li><img src="./images/Tablet-.jpg" alt="tablet" width="370"></li>
+                    <li class="item"><img src="./images/keyboard.jpg" alt="computer" width="370"></li>
+                    <li class="item"><img src="./images/Laptop-.jpg" alt="laptop" width="370"></li>
+                    <li class="item"><img src="./images/Tablet-.jpg" alt="tablet" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -95,20 +95,20 @@
         <section class="our-teem section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
-                <ul class="our-teem-list">
-                    <li><img src="./images/igor.jpg" alt="igor" width="270">
+                <ul class="our-teem-list list">
+                    <li class="item"><img src="./images/igor.jpg" alt="igor" width="270">
                         <h3 class="our-teem-title">Ігор Дем’яненко</h3>
                         <p class="our-teem-text">Product Designer</p>
                     </li>
-                    <li><img src="./images/olga.jpg" alt="olga" width="270">
+                    <li class="item"><img src="./images/olga.jpg" alt="olga" width="270">
                         <h3 class="our-teem-title">Ольга Репіна</h3>
                         <p class="our-teem-text">Frontend Developer</p>
                     </li>
-                    <li><img src="./images/mikolo.jpg" alt="mykola" width="270">
+                    <li class="item"><img src="./images/mikolo.jpg" alt="mykola" width="270">
                         <h3 class="our-teem-title">Микола Тарасов</h3>
                         <p class="our-teem-text">Marketing</p>
                     </li>
-                    <li><img src="./images/michael.jpg" alt="mykhailo" width="270">
+                    <li class="item"><img src="./images/michael.jpg" alt="mykhailo" width="270">
                         <h3 class="our-teem-title">Михайло Єрмаков</h3>
                         <p class="our-teem-text">UI Designer</p>
                     </li>
@@ -126,7 +126,7 @@
                     <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки,
                         26</a>
                 </address>
-                <ul>
+                <ul class="list">
                     <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
                     <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
                 </ul>
