--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     >
                     <ul class="menu-list list">
                         <li class="menu-item">
-                            <a href="" class="menu link">Студія</a>
+                            <a href="" class="menu link current">Студія</a>
                         </li>
                         <li class="menu-item">
                             <a href="./portfolio.html" class="menu link"
