--- a/portfolio.html
+++ b/portfolio.html
@@ -1,108 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>Portfilio</title>
+    </head>
 
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Portfilio</title>
-</head>
-
-<body>
-    <header>
-        <div class="container main-nav">
-            <nav class="top-navigation">
-                <a href="/" class="logo link"><span class="span-logo">Web</span>Studio</a>
-                <ul class="menu-list list">
-                    <li class="menu-item"><a href="./index.html" class="menu link">Студія</a></li>
-                    <li class="menu-item"><a href="" class="menu link">Портфоліо</a></li>
-                    <li class="menu-item"><a href="" class="menu link">Контакти</a></li>
-                </ul>
-            </nav>
-            <ul class="list-contakts list">
-                <li class="item"><a href="mailto:info@devstudio.com" class="header-contakt link">
-                        info@devstudio.com</a></li>
-                <li class="item"><a href="tel:+380961111111" class="header-contakt link">+38 096 111 11 11</a></li>
-            </ul>
-        </div>
-    </header>
-    <main>
-        <section class="section portfolio">
-            <div class="container">
-                <ul class="list-btn list">
-                    <li class="item"><button type="button" class="filter-btn">Усе</button></li>
-                    <li class="item"><button type="button" class="filter-btn">Веб-сайти</button></li>
-                    <li class="item"><button type="button" class="filter-btn">Застосунки</button></li>
-                    <li class="item"><button type="button" class="filter-btn">Дизайн</button></li>
-                    <li class="item"><button type="button" class="filter-btn">Маркетинг </button></li>
-                </ul>
-
-                <ul class="portfolio-list list">
-                    <li class="item"><img src="./images/texnokryak.jpg" alt="Website" width="370">
-                        <h3 class="portfolio-title">Технокряк</h3>
-                        <p class="portfolio-text">Веб-сайти</p>
-                    </li>
-                    <li class="item"><img src="./images/dizain.jpg" alt="Design" width="370">
-                        <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                        <p class="portfolio-text">Дизайн</p>
-                    </li>
-                    <li class="item"><img src="./images/restoraunt.jpg" alt="Application" width="370">
-                        <h3 class="portfolio-title">Ресторан Seafood</h3>
-                        <p class="portfolio-text">Застосунки</p>
-                    </li>
-                    <li class="item"><img src="./images/project.jpg" alt="Marketing" width="370">
-                        <h3 class="portfolio-title">Проект Prime</h3>
-                        <p class="portfolio-text">Маркетинг</p>
-                    </li>
-                    <li class="item"><img src="./images/project boxes.jpg" alt="Application" width="370">
-                        <h3 class="portfolio-title">Проект Boxes</h3>
-                        <p class="portfolio-text">Застосунки</p>
-                    </li>
-                    <li class="item"><img src="./images/inspiration.jpg" alt="Website" width="370">
-                        <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                        <p class="portfolio-text">Веб-сайти</p>
-                    </li>
-                    <li class="item"><img src="./images/limited edition.jpg" alt="Design" width="370">
-                        <h3 class="portfolio-title">Видавництво Limited Edition</h3>
-                        <p class="portfolio-text">Дизайн</p>
-                    </li>
-                    <li class="item"><img src="./images/labeltag.jpg" alt="Marketing" width="370">
-                        <h3 class="portfolio-title">Проект LAB</h3>
-                        <p class="portfolio-text">Маркетинг</p>
-                    </li>
-                    <li class="item"><img src="./images/growing.jpg" alt="Application" width="370">
-                        <h3 class="portfolio-title">Growing Business</h3>
-                        <p class="portfolio-text">Замовити</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Футер -->
-        <footer class="footer">
-            <div class="container">
-                <nav><a href="/" class="logo"><span class="span-logo">Web</span><span
-                            class="span-footer link">Studio</span></a>
+    <body>
+        <header>
+            <div class="container main-nav">
+                <nav class="top-navigation">
+                    <a href="/" class="logo link"
+                        ><span class="span-logo">Web</span>Studio</a
+                    >
+                    <ul class="menu-list list">
+                        <li class="menu-item">
+                            <a href="./index.html" class="menu link">Студія</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="" class="menu link current">Портфоліо</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="" class="menu link">Контакти</a>
+                        </li>
+                    </ul>
                 </nav>
-                <address>
-                    <a href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7" class="address link">м. Київ, пр-т Лесі Українки,
-                        26</a>
-                </address>
-                <ul class="list">
-                    <li><a href="mailto:info@devstudio.com" class="footer-contakt link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="footer-contakt link">+38 096 111 11 11</a></li>
+                <ul class="list-contakts list">
+                    <li class="item">
+                        <a
+                            href="mailto:info@devstudio.com"
+                            class="header-contakt link"
+                        >
+                            info@devstudio.com</a
+                        >
+                    </li>
+                    <li class="item">
+                        <a href="tel:+380961111111" class="header-contakt link"
+                            >+38 096 111 11 11</a
+                        >
+                    </li>
                 </ul>
             </div>
-        </footer>
-    </main>
-</body>
+        </header>
+        <main>
+            <section class="section portfolio">
+                <div class="container">
+                    <ul class="list-btn list">
+                        <li class="item">
+                            <button type="button" class="filter-btn">
+                                Усе
+                            </button>
+                        </li>
+                        <li class="item">
+                            <button type="button" class="filter-btn">
+                                Веб-сайти
+                            </button>
+                        </li>
+                        <li class="item">
+                            <button type="button" class="filter-btn">
+                                Застосунки
+                            </button>
+                        </li>
+                        <li class="item">
+                            <button type="button" class="filter-btn">
+                                Дизайн
+                            </button>
+                        </li>
+                        <li class="item">
+                            <button type="button" class="filter-btn">
+                                Маркетинг
+                            </button>
+                        </li>
+                    </ul>
 
+                    <ul class="portfolio-list list">
+                        <li class="item">
+                            <img
+                                src="./images/texnokryak.jpg"
+                                alt="Website"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Технокряк</h3>
+                            <p class="portfolio-text">Веб-сайти</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/dizain.jpg"
+                                alt="Design"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">
+                                Постер New Orlean vs Golden Star
+                            </h3>
+                            <p class="portfolio-text">Дизайн</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/restoraunt.jpg"
+                                alt="Application"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Ресторан Seafood</h3>
+                            <p class="portfolio-text">Застосунки</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/project.jpg"
+                                alt="Marketing"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Проект Prime</h3>
+                            <p class="portfolio-text">Маркетинг</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/project boxes.jpg"
+                                alt="Application"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Проект Boxes</h3>
+                            <p class="portfolio-text">Застосунки</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/inspiration.jpg"
+                                alt="Website"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">
+                                Inspiration has no Borders
+                            </h3>
+                            <p class="portfolio-text">Веб-сайти</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/limited edition.jpg"
+                                alt="Design"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">
+                                Видавництво Limited Edition
+                            </h3>
+                            <p class="portfolio-text">Дизайн</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/labeltag.jpg"
+                                alt="Marketing"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Проект LAB</h3>
+                            <p class="portfolio-text">Маркетинг</p>
+                        </li>
+                        <li class="item">
+                            <img
+                                src="./images/growing.jpg"
+                                alt="Application"
+                                width="370"
+                            />
+                            <h3 class="portfolio-title">Growing Business</h3>
+                            <p class="portfolio-text">Замовити</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Футер -->
+            <footer class="footer">
+                <div class="container">
+                    <nav>
+                        <a href="/" class="logo"
+                            ><span class="span-logo">Web</span
+                            ><span class="span-footer link">Studio</span></a
+                        >
+                    </nav>
+                    <address>
+                        <a
+                            href="https://goo.gl/maps/4LQCTVAEAGvyDWkp7"
+                            class="address link"
+                            >м. Київ, пр-т Лесі Українки, 26</a
+                        >
+                    </address>
+                    <ul class="list">
+                        <li>
+                            <a
+                                href="mailto:info@devstudio.com"
+                                class="footer-contakt link"
+                                >info@devstudio.com</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="tel:+380961111111"
+                                class="footer-contakt link"
+                                >+38 096 111 11 11</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </footer>
+        </main>
+    </body>
 </html>
