--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <section class="advantages section">
                 <div class="container">
                     <h2 class="visually-hidden">Наші переваги</h2>
-                    <ul class="attention-list">
+                    <ul class="advantages-list">
                         <li class="item">
                             <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                             <p class="advantages-text">
