--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="header-border">
             <div class="container main-nav">
                 <nav class="top-navigation">
                     <a href="/" class="logo link"
