--- a/index.html
+++ b/index.html
@@ -167,13 +167,24 @@
                                 alt="computer"
                                 width="370"
                             />
+
+                            <div class="our-work-bg">
+                                <h3 class="our-work-title">
+                                    Десктопні додатки
+                                </h3>
+                            </div>
                         </li>
+
                         <li class="item">
                             <img
                                 src="./images/Laptop-.jpg"
                                 alt="laptop"
                                 width="370"
                             />
+
+                            <div class="our-work-bg">
+                                <h3 class="our-work-title">Мобільні додатки</h3>
+                            </div>
                         </li>
                         <li class="item">
                             <img
@@ -181,6 +192,12 @@
                                 alt="tablet"
                                 width="370"
                             />
+
+                            <div class="our-work-bg">
+                                <h3 class="our-work-title">
+                                    Дизайнерські рішення
+                                </h3>
+                            </div>
                         </li>
                     </ul>
                 </div>
