--- a/portfolio.html
+++ b/portfolio.html
@@ -100,13 +100,28 @@
 
                     <ul class="portfolio-list list">
                         <li class="item">
-                            <img
-                                src="./images/texnokryak.jpg"
-                                alt="Website"
-                                width="370"
-                            />
-                            <h3 class="portfolio-title">Технокряк</h3>
-                            <p class="portfolio-text">Веб-сайти</p>
+                            <a class="project-link" href="">
+                                <div class="project-thumb">
+                                    <div class="project-overlay">
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
+                                    </div>
+                                    <img
+                                        src="./images/texnokryak.jpg"
+                                        alt="Website"
+                                        width="370"
+                                    />
+                                </div>
+                                <div class="project-discraption">
+                                    <p class="portfolio-text">Веб-сайти</p>
+                                    <h3 class="portfolio-title">Технокряк</h3>
+                                </div>
+                            </a>
                         </li>
                         <li class="item">
                             <img
