--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
             <section class="our-customers">
                 <div class="container">
-                    <h2 class="our-customers-title">Постійні клієнти</h2>
+                    <h2 class="section-title">Постійні клієнти</h2>
                     <ul class="our-customers-list">
                         <li class="item">
                             <a href="" class="customers-link">
@@ -421,7 +421,7 @@
                                     height="68"
                                 >
                                     <use
-                                        href="./images/svg/symbol-defs.svg#"
+                                        href="./images/symbol-defs.svg#icon-logo-1"
                                     ></use>
                                 </svg>
                             </a>
@@ -434,7 +434,7 @@
                                     height="68"
                                 >
                                     <use
-                                        href="./images/svg/symbol-defs.svg#"
+                                        href="./images/symbol-defs.svg#icon-logo-2"
                                     ></use>
                                 </svg>
                             </a>
@@ -447,7 +447,7 @@
                                     height="68"
                                 >
                                     <use
-                                        href="./images/svg/symbol-defs.svg#"
+                                        href="./images/symbol-defs.svg#icon-logo-3"
                                     ></use>
                                 </svg>
                             </a>
@@ -460,7 +460,7 @@
                                     height="68"
                                 >
                                     <use
-                                        href="./images/svg/symbol-defs.svg#"
+                                        href="./images/symbol-defs.svg#icon-logo-4"
                                     ></use>
                                 </svg>
                             </a>
@@ -473,7 +473,7 @@
                                     height="68"
                                 >
                                     <use
-                                        href="./images/svg/symbol-defs.svg#"
+                                        href="./images/symbol-defs.svg#icon-logo-5"
                                     ></use>
                                 </svg>
                             </a>
@@ -613,6 +613,24 @@
                 </div>
             </div>
         </main>
+        <div class="go-top go-top-show">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="68"
+                height="68"
+                viewBox="0 0 68 68"
+                fill="none"
+            >
+                <rect width="68" height="68" rx="8" fill="#93ABAE" />
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M26 28.1667L34 19L42 28.1667H35.3856V49H32.6144V28.1667H26Z"
+                    fill="#F6F5EF"
+                />
+            </svg>
+        </div>
+        <script src="./js/gotop.js" type="module"></script>
         <script src="./js/modal.js" type="module"></script>
     </body>
 </html>
