--- a/portfolio.html
+++ b/portfolio.html
@@ -325,5 +325,24 @@
                 </div>
             </footer>
         </main>
+        <div class="go-top go-top-show">
+            <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="68"
+                height="68"
+                viewBox="0 0 68 68"
+                fill="none"
+            >
+                <rect width="68" height="68" rx="8" fill="#93ABAE" />
+                <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M26 28.1667L34 19L42 28.1667H35.3856V49H32.6144V28.1667H26Z"
+                    fill="#F6F5EF"
+                />
+            </svg>
+        </div>
+        <script src="./js/gotop.js" type="module"></script>
+        <script src="./js/modal.js" type="module"></script>
     </body>
 </html>
