--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
         />
 
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
         <link rel="stylesheet" href="./css/style.css" />
         <title>WebStudia</title>
     </head>
@@ -74,6 +78,7 @@
         <main>
             <!-- Герой -->
             <section class="hero section">
+                <h1 class="animate__animated">An animated element</h1>
                 <div class="container">
                     <h1 class="hero-title">
                         Ефективні рішення для вашого бізнесу
@@ -543,7 +548,7 @@
                                 />
                                 <svg class="modal-icon" width="18" height="18">
                                     <use
-                                        href="./images/svg/symbol-defs.svg#icon-person-modal"
+                                        href="./images/symbol-defs.svg#icon-person-modal"
                                     ></use>
                                 </svg>
                             </div>
@@ -560,7 +565,7 @@
                                 />
                                 <svg class="modal-icon" width="18" height="18">
                                     <use
-                                        href="./images/svg/symbol-defs.svg#icon-phone-modal"
+                                        href="./images/symbol-defs.svg#icon-phone-modal"
                                     ></use>
                                 </svg>
                             </div>
@@ -577,7 +582,7 @@
                                 />
                                 <svg class="modal-icon" width="18" height="18">
                                     <use
-                                        href="./images/svg/symbol-defs.svg#icon-email-modal"
+                                        href="./images/symbol-defs.svg#icon-email-modal"
                                     ></use>
                                 </svg>
                             </div>
