--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,9 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Постер New Orlean vs Golden Star
+                                        </p>
                                     </div>
                                     <img
                                         src="./images/dizain.jpg"
