--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,11 @@
                                 <div class="project-thumb">
                                     <div class="project-overlay">
                                         <p class="overlay-text">
-                                            Постер New Orlean vs Golden Star
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
                                         </p>
                                     </div>
                                     <img
@@ -149,7 +153,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
                                     <img
                                         src="./images/restoraunt.jpg"
@@ -169,7 +179,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
                                     <img
                                         src="./images/project.jpg"
@@ -190,7 +206,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
 
                                     <img
@@ -211,7 +233,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
 
                                     <img
@@ -232,7 +260,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
 
                                     <img
@@ -253,7 +287,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
 
                                     <img
@@ -272,7 +312,13 @@
                             <a class="project-link" href="">
                                 <div class="project-thumb">
                                     <div class="project-overlay">
-                                        <p class="overlay-text"></p>
+                                        <p class="overlay-text">
+                                            Технокрик це сучасний майданчик
+                                            поширення коронавірусу. Компанії
+                                            використовують цю платформу для
+                                            цифрового шпигунства та атак на
+                                            захищені сервери конкурентів.
+                                        </p>
                                     </div>
 
                                     <img
